fix: remove overflow

--- a/src/app/components/choices/choices.scss
+++ b/src/app/components/choices/choices.scss
@@ -7,7 +7,7 @@ div.container {
   gap: 1rem;
 
   div.horizontal-line {
-    height: 15rem;
+    height: 5rem;
     border-right: 1px solid $text-muted;
   }
 
