--- a/src/app/score-page/score-page.scss
+++ b/src/app/score-page/score-page.scss
@@ -11,6 +11,7 @@ div.container {
   justify-content: center;
   align-items: center;
   gap: 3rem;
+  padding: 0 1rem 0 1rem;
 
   .card {
     padding: 1rem;
