--- a/src/styles.scss
+++ b/src/styles.scss
@@ -35,6 +35,9 @@ body {
 html,
 body {
   height: 100dvh;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
 }
 
 :root {
@@ -47,6 +50,7 @@ body {
   margin: 0;
   font-family: cursive, sans-serif;
   box-sizing: border-box;
+  // outline: 1px solid red;
 }
 
 @media (min-width: 1200px) {
